--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,6 @@
   <link href="vendors/prism/prism.css" rel="stylesheet">
   <link href="assets/css/theme.css" rel="stylesheet" />
   <link href="assets/css/user.css" rel="stylesheet" />
-
 </head>
 
 
@@ -74,9 +73,10 @@
             <h1 class="display-2 text-light fw-thin">We help small trucking companies fill out <br
                 class="d-none d-xl-block" /> <strong class="fw-bolder">Carrier Packets. </strong></h1>
             <p class="fs-2 text-400">Solve the headaches
-              and hassles of <br class="d-none d-xxl-block" />carrier
+              and hassles of carrier
               packets once and for
-              all! </p>
+              all!
+              <!-- <br class="d-none d-xxl-block" /> </p> -->
             <!-- <a class="btn btn-primary btn-ensurance mt-5" href="#!"><span
                 class="fas fa-chevron-right fa-xs btn-icon"></span><span class="btn-text">Learn more</span></a> -->
           </div>
