Minor changes and deployment

--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
               packets once and for
               all!
               <!-- <br class="d-none d-xxl-block" /> </p> -->
-            <!-- <a class="btn btn-primary btn-ensurance mt-5" href="#!"><span
+              <!-- <a class="btn btn-primary btn-ensurance mt-5" href="#!"><span
                 class="fas fa-chevron-right fa-xs btn-icon"></span><span class="btn-text">Learn more</span></a> -->
           </div>
           <div class="col-md-5 col-xl-5 pe-xxl-0">
@@ -157,10 +157,14 @@
                 <div class="tab-pane fade show active" id="nav-car" role="tabpanel" aria-labelledby="nav-car-tab">
                   <div class="row align-items-center offset-sm-1 g-3">
                     <div class="col-md-6 col-xl-4 order-1 order-md-0">
-                      <h1 class="text-light mb-md-6">Carrier Packet Filling</h1>
-                      <p class="text-400">Make a plan for the emergence of life. We protect your most precious assets,
-                        allowing you to devote your time and energy to more essential things in life.</p>
-                      <p class="text-400 mt-3">Discover the most appropriate fit for you and your Family.</p>
+                      <h1 class="text-light mb-md-6">Carrier Packets</h1>
+                      <p class="text-400">Worry no more about Carrier Packets! We are available to help you fill out
+                        Carrier Packets from 6 am to 6 pm Central Standard Time. Our promise to you as our customers is
+                        fast and reliable service.
+
+                      </p>
+                      <p class="text-400 mt-3"> We only charge $100 for a truck. Register here to learn more. We have
+                        huge discounts for companies with more than two trucks. Register now to get a quote.</p>
                     </div>
                     <div class="col-md-6 col-xl-8 text-end">
                       <div class="img-shape"><img class="feature-img" src="assets/img/gallery/car.png" alt="..." />
