--- a/public/index.html
+++ b/public/index.html
@@ -93,16 +93,16 @@
 
       <div class="container">
         <div class="row align-items-center min-vh-100">
-          <div class="col-md-7 col-xl-7 pt-9 text-md-start text-center">
-            <h1 class="display-2 text-light fw-thin">We help small trucking companies fill out <br
-                class="d-none d-xl-block" /> <strong class="fw-bolder">Carrier Packets. </strong></h1>
-            <p class="fs-2 text-400">Solve the headaches
-              and hassles of carrier
-              packets once and for
-              all!
-              <!-- <br class="d-none d-xxl-block" /> </p> -->
-              <!-- <a class="btn btn-primary btn-ensurance mt-5" href="#!"><span
-                class="fas fa-chevron-right fa-xs btn-icon"></span><span class="btn-text">Learn more</span></a> -->
+          <div class="col-md-7 col-xl-7 pt-7 text-md-start text-center">
+            <h1 class="display-4 text-light fw-normal">We serve small trucking companies: We fill out Carrier Packets & <br
+                class="d-none d-xl-block" /> <strong class="fw-bolder"> we dispatch. </strong></h1>
+              <br class="d-none d-xxl-block" /> 
+
+            <p class="fs-2 text-400 pt-4">Take action now and free yourself from the hassle that comes with filling out carrier packets for only $100 per month.</p>
+              <br class="d-none d-xxl-block" /> 
+            <p class="fs-2 text-400">Contact us now to learn more.  → </p>
+
+              
           </div>
           <div class="col-md-5 col-xl-5 pe-xxl-0">
             <div class="card card-bg shadow hero-header-form">
@@ -233,23 +233,23 @@
             <div class="row">
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
                   src="assets/img/icons/support.png" height="60" alt="..." />
-                <h4 class="mt-4 fw-normal text-200">24x7 Support</h4>
-                <p class="text-400 mb-md-0">Client is our most <br> important priority</p>
+                <h4 class="mt-4 fw-normal text-200">Open 7 days a week</h4>
+                <p class="text-400 mb-md-0">CWe are open from 6 am to 6 pm CST & we are working on improving our times even more for our clients in the west and east. </p>
               </div>
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
                   src="assets/img/icons/edit.png" height="60" alt="..." />
-                <h4 class="mt-4 fw-normal text-200">Easy Claim System</h4>
-                <p class="text-400 mb-md-0">Express your desires <br>and needs to us</p>
+                <h4 class="mt-4 fw-normal text-200">Fast response time</h4>
+                <p class="text-400 mb-md-0">We will always have available staffing to start working on your packets as soon as we receive them</p>
               </div>
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
                   src="assets/img/icons/money.png" height="60" alt="..." />
-                <h4 class="mt-4 fw-normal text-200">Carrier Packet Filling</h4>
-                <p class="text-400 mb-md-0">It's quick, safe, and simple. Select several methods of payment</p>
+                <h4 class="mt-4 fw-normal text-200">We'll do the hard work</h4>
+                <p class="text-400 mb-md-0">After you send us a packet, we will take care of the rest. We will call contact all parties needed to complete your Carrier Packet.</p>
               </div>
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
                   src="assets/img/icons/security.png" height="60" alt="..." />
                 <h4 class="mt-4 fw-normal text-200">Dispatching</h4>
-                <p class="text-400 mb-md-0">Food is made and delivered directly to your home.</p>
+                <p class="text-400 mb-md-0">We will work with you to forge a plan that will make you the most money and get you home when needed.</p>
               </div>
             </div>
           </div>
