Finalizing, Only Success Message Left

--- a/public/index.html
+++ b/public/index.html
@@ -171,13 +171,13 @@
               <div class="nav flex-column nav-tab" id="nav-tab" role="tablist" aria-orientation="vertical"><a
                   class="circle-hover-wrapper nav-link mb-lg-4 active" id="nav-car-tab" href="#!" data-bs-toggle="tab"
                   data-bs-target="#nav-car" role="tab" aria-controls="nav-car" aria-selected="true">
-                  <div class="icon-box"><img class="car-insurance-icon" src="assets/img/icons/car.png" alt="..." /><img
-                      class="car-insurance-icon car-insurance-icon-hover" src="assets/img/icons/car-hover.png"
+                  <div class="icon-box"><img class="car-insurance-icon" src="assets/img/icons/packet.png" alt="..." /><img
+                      class="car-insurance-icon car-insurance-icon-hover" src="assets/img/icons/packet-hover.png"
                       alt="..." /></div>
                 </a><a class="circle-hover-wrapper nav-link mb-lg-4" id="nav-home-tab" href="#!" data-bs-toggle="tab"
                   data-bs-target="#nav-home" role="tab" aria-controls="nav-home" aria-selected="false">
-                  <div class="icon-box"><img class="car-insurance-icon" src="assets/img/icons/home.png" alt="..." /><img
-                      class="car-insurance-icon car-insurance-icon-hover" src="assets/img/icons/home-hover.png"
+                  <div class="icon-box"><img class="car-insurance-icon" src="assets/img/icons/dispatching.png" alt="..." /><img
+                      class="car-insurance-icon car-insurance-icon-hover" src="assets/img/icons/dispatching-hover.png"
                       alt="..." /></div>
                 </a>
               </div>
@@ -185,7 +185,7 @@
                 <div class="tab-pane fade show active" id="nav-car" role="tabpanel" aria-labelledby="nav-car-tab">
                   <div class="row align-items-center offset-sm-1 g-3">
                     <div class="col-md-6 col-xl-5 order-1 order-md-0">
-                      <h1 class="text-light mb-md-3">Carrier Packets</h1>
+                      <h1 class="text-light mb-md-6">Carrier Packets</h1>
                       <p class="text-400">Worry no more about Carrier Packets! We are available to help you fill out
                         Carrier Packets from 6 am to 6 pm Central Standard Time. Our promise to you as our customers is
                         fast and reliable service.
@@ -195,7 +195,7 @@
                         huge discounts for companies with more than two trucks. Register now to learn more and get a quote.</p>
                     </div>
                     <div class="col-md-6 col-xl-7 text-end">
-                      <div class="img-shape"><img class="feature-img" src="assets/img/gallery/car.png" alt="..." />
+                      <div class="img-shape"><img class="feature-img" src="assets/img/gallery/packets.png" alt="..." />
                       </div>
                     </div>
                   </div>
@@ -203,7 +203,7 @@
                 <div class="tab-pane fade" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                   <div class="row align-items-center offset-sm-1 g-3">
                     <div class="col-md-6 col-xl-5 order-1 order-md-0">
-                      <h1 class="text-light mb-md-3">Dispatching</h1>
+                      <h1 class="text-light mb-md-6">Dispatching</h1>
                       <p class="text-400">The trucking business requires a lot of investment. It requires both monetary
                         and energy investment. If you're this invested in any business, you need to earn as much as
                         possible. We will make this possible for you.
@@ -215,7 +215,7 @@
 
                     </div>
                     <div class="col-md-6 col-xl-7 text-end">
-                      <div class="img-shape"><img class="feature-img" src="assets/img/gallery/home.png" alt="..." />
+                      <div class="img-shape"><img class="feature-img" src="assets/img/gallery/car.png" alt="..." />
                       </div>
                     </div>
                   </div>
@@ -232,22 +232,22 @@
             </div>
             <div class="row">
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
-                  src="assets/img/icons/support.png" height="60" alt="..." />
+                  src="assets/img/icons/calendar.png" height="60" alt="..." />
                 <h4 class="mt-4 fw-normal text-200">Open 7 days a week</h4>
                 <p class="text-400 mb-md-0">CWe are open from 6 am to 6 pm CST & we are working on improving our times even more for our clients in the west and east. </p>
               </div>
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
-                  src="assets/img/icons/edit.png" height="60" alt="..." />
+                  src="assets/img/icons/response.png" height="60" alt="..." />
                 <h4 class="mt-4 fw-normal text-200">Fast response time</h4>
                 <p class="text-400 mb-md-0">We will always have available staffing to start working on your packets as soon as we receive them</p>
               </div>
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
-                  src="assets/img/icons/money.png" height="60" alt="..." />
+                  src="assets/img/icons/work.png" height="60" alt="..." />
                 <h4 class="mt-4 fw-normal text-200">We'll do the hard work</h4>
                 <p class="text-400 mb-md-0">After you send us a packet, we will take care of the rest. We will call contact all parties needed to complete your Carrier Packet.</p>
               </div>
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
-                  src="assets/img/icons/security.png" height="60" alt="..." />
+                  src="assets/img/icons/dispatchingwhy.png" height="60" alt="..." />
                 <h4 class="mt-4 fw-normal text-200">Dispatching</h4>
                 <p class="text-400 mb-md-0">We will work with you to forge a plan that will make you the most money and get you home when needed.</p>
               </div>
@@ -275,7 +275,7 @@
                         <div class="card-body pt-0 p-md-0">
                           <div class="d-flex flex-column flex-md-row align-items-center">
                             <div class="card-span-img">
-                              <div class="circle-wrapper"><img class="rounded-circle w-100" src="assets/img/team/1.jpg"
+                              <div class="circle-wrapper"><img class="rounded-circle w-100" src="assets/img/team/1.png"
                                   alt="" /></div>
                             </div>
                             <div class="mt-n6 mt-md-0 text-center text-md-start px-md-6 px-xl-8 px-xxl-10">
@@ -298,7 +298,7 @@
                         <div class="card-body pt-0 p-md-0">
                           <div class="d-flex flex-column flex-md-row align-items-center">
                             <div class="card-span-img">
-                              <div class="circle-wrapper"><img class="rounded-circle w-100" src="assets/img/team/2.jpg"
+                              <div class="circle-wrapper"><img class="rounded-circle w-100" src="assets/img/team/2.png"
                                   alt="" /></div>
                             </div>
                             <div class="mt-n6 mt-md-0 text-center text-md-start px-md-6 px-xl-8 px-xxl-10">
@@ -323,7 +323,7 @@
                         <div class="card-body pt-0 p-md-0">
                           <div class="d-flex flex-column flex-md-row align-items-center">
                             <div class="card-span-img">
-                              <div class="circle-wrapper"><img class="rounded-circle w-100" src="assets/img/team/3.jpg"
+                              <div class="circle-wrapper"><img class="rounded-circle w-100" src="assets/img/team/3.png"
                                   alt="" /></div>
                             </div>
                             <div class="mt-n6 mt-md-0 text-center text-md-start px-md-6 px-xl-8 px-xxl-10">
@@ -384,7 +384,7 @@
             <p class="text-light"> <i class="fas fa-envelope me-3 text-primary"> </i><a
                 href="mailto:support@ooforms.com">support@ooforms.com </a></p>
             <p class="text-light"> <i class="fas fa-phone-alt me-3 text-primary"> </i><a
-                href="tel:1-800-800-2299">1-800-800-2299 (Support)</a></p>
+                href="tel:(409) 223-7052">(409) 223-7052 (Support)</a></p>
           </div>
           <!-- <div class="col-12 col-lg-6 col-xl-5">
             <h3 class="text-200 my-4">Subscribe to newsletter </h3>
