--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,90 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+  <style>
+    #snackbar {
+      visibility: hidden;
+      min-width: 250px;
+      margin-left: -125px;
+      background-color: rgb(0, 202, 44);
+      color: #fff;
+      text-align: center;
+      border-radius: 5px;
+      padding: 20px;
+      position: fixed;
+      z-index: 1;
+      left: 30%;
+      bottom: 20%;
+      font-size: 25px;
+    }
 
+    #snackbar.show {
+      visibility: visible;
+      -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+      animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    }
+
+    @-webkit-keyframes fadein {
+      from {
+        bottom: 0;
+        opacity: 0;
+      }
+
+      to {
+        bottom: 20%;
+        opacity: 1;
+      }
+    }
+
+    @keyframes fadein {
+      from {
+        bottom: 0;
+        opacity: 0;
+      }
+
+      to {
+        bottom: 20%;
+        opacity: 1;
+      }
+    }
+
+    @-webkit-keyframes fadeout {
+      from {
+        bottom: 20%;
+        opacity: 1;
+      }
+
+      to {
+        bottom: 0;
+        opacity: 0;
+      }
+    }
+
+    @keyframes fadeout {
+      from {
+        bottom: 20%;
+        opacity: 1;
+      }
+
+      to {
+        bottom: 0;
+        opacity: 0;
+      }
+    }
+  </style>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+  <script>
+    function myFunction() {
+      // Get the snackbar DIV
+      var x = document.getElementById("snackbar");
+
+      // Add the "show" class to DIV
+      x.className = "show";
+
+      // After 3 seconds, remove the show class from DIV
+      setTimeout(function () { x.className = x.className.replace("show", ""); }, 3000);
+    } 
+  </script>
   <script>
     (function () {
       emailjs.init("user_dKPvsHBVzR0LTSI7idqmC");
@@ -21,14 +103,17 @@
         // these IDs from the previous steps
         emailjs.sendForm('service_6zylydd', 'template_h1z430l', this)
           .then(function () {
-            alert("Success")
-            // window.location.reload();
+            myFunction()
+            setTimeout(function () {
+              window.location.reload();
+            }, 5000);
           }, function (error) {
             console.log('FAILED...', error);
           });
       });
     }
   </script>
+
 
 
   <!-- =============================================== -->
@@ -66,6 +151,9 @@
   <!-- ===============================================-->
   <!--    Main Content-->
   <!-- ===============================================-->
+  <div id="snackbar">
+    😁 Thank you for reaching out, Our support team will be contact you soon.
+  </div>
   <main class="main" id="top">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" data-navbar-on-scroll="data-navbar-on-scroll">
       <div class="container"><a class="navbar-brand" href="index.html"><span
@@ -94,15 +182,19 @@
       <div class="container">
         <div class="row align-items-center min-vh-100">
           <div class="col-md-7 col-xl-7 pt-7 text-md-start text-center">
-            <h1 class="display-4 text-light fw-normal">We serve small trucking companies: We fill out Carrier Packets & <br
-                class="d-none d-xl-block" /> <strong class="fw-bolder"> we dispatch. </strong></h1>
-              <br class="d-none d-xxl-block" /> 
+            <h1 class="display-4 text-light fw-normal">We serve small trucking companies: We fill out Carrier Packets &
+              <br class="d-none d-xl-block" /> <strong class="fw-bolder"> we dispatch. </strong>
+            </h1>
+            <br class="d-none d-xxl-block" />
+            <button onclick="myFunction()">
+              Click here</button>
 
-            <p class="fs-2 text-400 pt-4">Take action now and free yourself from the hassle that comes with filling out carrier packets for only $100 per month.</p>
-              <br class="d-none d-xxl-block" /> 
-            <p class="fs-2 text-400">Contact us now to learn more.  → </p>
+            <p class="fs-2 text-400 pt-4">Take action now and free yourself from the hassle that comes with filling out
+              carrier packets for only $100 per month.</p>
+            <br class="d-none d-xxl-block" />
+            <p class="fs-2 text-400">Contact us now to learn more. → </p>
 
-              
+
           </div>
           <div class="col-md-5 col-xl-5 pe-xxl-0">
             <div class="card card-bg shadow hero-header-form">
@@ -171,14 +263,14 @@
               <div class="nav flex-column nav-tab" id="nav-tab" role="tablist" aria-orientation="vertical"><a
                   class="circle-hover-wrapper nav-link mb-lg-4 active" id="nav-car-tab" href="#!" data-bs-toggle="tab"
                   data-bs-target="#nav-car" role="tab" aria-controls="nav-car" aria-selected="true">
-                  <div class="icon-box"><img class="car-insurance-icon" src="assets/img/icons/packet.png" alt="..." /><img
-                      class="car-insurance-icon car-insurance-icon-hover" src="assets/img/icons/packet-hover.png"
-                      alt="..." /></div>
+                  <div class="icon-box"><img class="car-insurance-icon" src="assets/img/icons/packet.png"
+                      alt="..." /><img class="car-insurance-icon car-insurance-icon-hover"
+                      src="assets/img/icons/packet-hover.png" alt="..." /></div>
                 </a><a class="circle-hover-wrapper nav-link mb-lg-4" id="nav-home-tab" href="#!" data-bs-toggle="tab"
                   data-bs-target="#nav-home" role="tab" aria-controls="nav-home" aria-selected="false">
-                  <div class="icon-box"><img class="car-insurance-icon" src="assets/img/icons/dispatching.png" alt="..." /><img
-                      class="car-insurance-icon car-insurance-icon-hover" src="assets/img/icons/dispatching-hover.png"
-                      alt="..." /></div>
+                  <div class="icon-box"><img class="car-insurance-icon" src="assets/img/icons/dispatching.png"
+                      alt="..." /><img class="car-insurance-icon car-insurance-icon-hover"
+                      src="assets/img/icons/dispatching-hover.png" alt="..." /></div>
                 </a>
               </div>
               <div class="tab-content w-100" id="nav-tabContent">
@@ -192,7 +284,8 @@
 
                       </p>
                       <p class="text-400 mt-3"> We only charge $100 for a truck. Register here to learn more. We have
-                        huge discounts for companies with more than two trucks. Register now to learn more and get a quote.</p>
+                        huge discounts for companies with more than two trucks. Register now to learn more and get a
+                        quote.</p>
                     </div>
                     <div class="col-md-6 col-xl-7 text-end">
                       <div class="img-shape"><img class="feature-img" src="assets/img/gallery/packets.png" alt="..." />
@@ -234,22 +327,26 @@
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
                   src="assets/img/icons/calendar.png" height="60" alt="..." />
                 <h4 class="mt-4 fw-normal text-200">Open 7 days a week</h4>
-                <p class="text-400 mb-md-0">CWe are open from 6 am to 6 pm CST & we are working on improving our times even more for our clients in the west and east. </p>
+                <p class="text-400 mb-md-0">CWe are open from 6 am to 6 pm CST & we are working on improving our times
+                  even more for our clients in the west and east. </p>
               </div>
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
                   src="assets/img/icons/response.png" height="60" alt="..." />
                 <h4 class="mt-4 fw-normal text-200">Fast response time</h4>
-                <p class="text-400 mb-md-0">We will always have available staffing to start working on your packets as soon as we receive them</p>
+                <p class="text-400 mb-md-0">We will always have available staffing to start working on your packets as
+                  soon as we receive them</p>
               </div>
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
                   src="assets/img/icons/work.png" height="60" alt="..." />
                 <h4 class="mt-4 fw-normal text-200">We'll do the hard work</h4>
-                <p class="text-400 mb-md-0">After you send us a packet, we will take care of the rest. We will call contact all parties needed to complete your Carrier Packet.</p>
+                <p class="text-400 mb-md-0">After you send us a packet, we will take care of the rest. We will call
+                  contact all parties needed to complete your Carrier Packet.</p>
               </div>
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
                   src="assets/img/icons/dispatchingwhy.png" height="60" alt="..." />
                 <h4 class="mt-4 fw-normal text-200">Dispatching</h4>
-                <p class="text-400 mb-md-0">We will work with you to forge a plan that will make you the most money and get you home when needed.</p>
+                <p class="text-400 mb-md-0">We will work with you to forge a plan that will make you the most money and
+                  get you home when needed.</p>
               </div>
             </div>
           </div>
@@ -380,11 +477,13 @@
           <div class="col-12 col-lg-6 col-xl-7 mb-4 order-0 order-sm-0"><a class="logo-footer fs-7"
               href="index.html"><span class="text-primary fw-bolder">oo</span><span
                 class="fw-thin text-300">Forms</span></a>
-            <p class="text-light my-4"> <i class="fas fa-map-marker-alt me-3"></i><span class="text-light">2616 S Loop W Suite # 305i,  &nbsp;</span><a class="text-light" href="tel:+1 281 501 1925">+1 281 501 1925</a><br />Houston, TX 77054, United States</p>
+            <p class="text-light my-4"> <i class="fas fa-map-marker-alt me-3"></i><span class="text-light">2616 S Loop W
+                Suite # 305i, &nbsp;</span><a class="text-light" href="tel:+1 281 501 1925">+1 281 501
+                1925</a><br />Houston, TX 77054, United States</p>
             <p class="text-light"> <i class="fas fa-envelope me-3 text-primary"> </i><a
                 href="mailto:support@ooforms.com">support@ooforms.com </a></p>
-            <p class="text-light"> <i class="fas fa-phone-alt me-3 text-primary"> </i><a
-                href="tel:(409) 223-7052">(409) 223-7052 (Support)</a></p>
+            <p class="text-light"> <i class="fas fa-phone-alt me-3 text-primary"> </i><a href="tel:(409) 223-7052">(409)
+                223-7052 (Support)</a></p>
           </div>
           <!-- <div class="col-12 col-lg-6 col-xl-5">
             <h3 class="text-200 my-4">Subscribe to newsletter </h3>
