--- a/public/index.html
+++ b/public/index.html
@@ -168,7 +168,6 @@
             <li class="nav-item px-2"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
             <li class="nav-item px-2"><a class="nav-link" href="#products">Services</a></li>
             <li class="nav-item px-2"><a class="nav-link" href="#testimonials">Testimonials</a></li>
-            <li class="nav-item px-2"><a class="nav-link" href="#contact">Newsletter</a></li>
           </ul>
         </div>
       </div>
@@ -186,9 +185,6 @@
               <br class="d-none d-xl-block" /> <strong class="fw-bolder"> we dispatch. </strong>
             </h1>
             <br class="d-none d-xxl-block" />
-            <button onclick="myFunction()">
-              Click here</button>
-
             <p class="fs-2 text-400 pt-4">Take action now and free yourself from the hassle that comes with filling out
               carrier packets for only $100 per month.</p>
             <br class="d-none d-xxl-block" />
@@ -318,6 +314,8 @@
             </div>
           </div>
         </div>
+
+
         <div class="row offset-xl-2">
           <div class="col-12">
             <div class="mb-3 mb-md-5">
@@ -482,8 +480,7 @@
                 1925</a><br />Houston, TX 77054, United States</p>
             <p class="text-light"> <i class="fas fa-envelope me-3 text-primary"> </i><a
                 href="mailto:support@ooforms.com">support@ooforms.com </a></p>
-            <p class="text-light"> <i class="fas fa-phone-alt me-3 text-primary"> </i><a href="tel:(409) 223-7052">(409)
-                223-7052 (Support)</a></p>
+            <p class="text-light"> <i class="fas fa-phone-alt me-3 text-primary"> </i><a href="tel:+1 281 501 1925">+1 281 501 1925 (Support)</a></p>
           </div>
           <!-- <div class="col-12 col-lg-6 col-xl-5">
             <h3 class="text-200 my-4">Subscribe to newsletter </h3>
@@ -517,8 +514,8 @@
               <div class="pb-4">
                 <ul class="widget-list d-flex flex-wrap justify-content-center justify-content-md-start">
                   <li><a class="widget-list-link fs-ms" href="#">Home</a></li>
-                  <li class="ms-4"><a class="widget-list-link fs-ms" href="#news">Blog</a></li>
                   <li class="ms-4"><a class="widget-list-link fs-ms" href="#products">Services</a></li>
+                  <li class="ms-4"><a class="widget-list-link fs-ms" href="#testimonials">Testimonials</a></li>
                 </ul>
               </div>
               <div class="pb-4">
