Done with emails

--- a/public/index.html
+++ b/public/index.html
@@ -325,8 +325,8 @@
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
                   src="assets/img/icons/calendar.png" height="60" alt="..." />
                 <h4 class="mt-4 fw-normal text-200">Open 7 days a week</h4>
-                <p class="text-400 mb-md-0">CWe are open from 6 am to 6 pm CST & we are working on improving our times
-                  even more for our clients in the west and east. </p>
+                <p class="text-400 mb-md-0">We are open from 6 am to 6 pm CST & we are working on improving our times
+                  even more for our clients in the West and East. </p>
               </div>
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
                   src="assets/img/icons/response.png" height="60" alt="..." />
