--- a/public/index.html
+++ b/public/index.html
@@ -165,7 +165,7 @@
           <p class="mb-0 ms-auto text-light fs-0 fw-normal"><i class="fas fa-phone-alt me-2"></i>Call Us Now <a
               class="text-light" href="tel:+1 281 501 1925">+1 281 501 1925</a></p>
           <ul class="navbar-nav ms-auto border-bottom border-lg-bottom-0 pt-2 pt-lg-0">
-            <li class="nav-item px-2"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+            <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="#">Home</a></li>
             <li class="nav-item px-2"><a class="nav-link" href="#products">Services</a></li>
             <li class="nav-item px-2"><a class="nav-link" href="#testimonials">Testimonials</a></li>
           </ul>
@@ -181,11 +181,11 @@
       <div class="container">
         <div class="row align-items-center min-vh-100">
           <div class="col-md-7 col-xl-7 pt-7 text-md-start text-center">
-            <h1 class="display-4 text-light fw-normal">We serve small trucking companies: We fill out Carrier Packets &
-              <br class="d-none d-xl-block" /> <strong class="fw-bolder"> we dispatch. </strong>
+            <h1 class="display-4 text-light fw-thin">We serve small trucking companies: We fill out Carrier Packets &
+              <br class="d-none d-xl-block" /> <strong class="fw-bolder"> we Dispatch. </strong>
             </h1>
             <br class="d-none d-xxl-block" />
-            <p class="fs-2 text-400 pt-4">Take action now and free yourself from the hassle that comes with filling out
+            <p class="fs-1 text-400 pt-0">Take action now and free yourself from the hassle that comes with filling out
               carrier packets for only $100 per month.</p>
             <br class="d-none d-xxl-block" />
             <p class="fs-2 text-400">Contact us now to learn more. → </p>
@@ -295,10 +295,10 @@
                       <h1 class="text-light mb-md-6">Dispatching</h1>
                       <p class="text-400">The trucking business requires a lot of investment. It requires both monetary
                         and energy investment. If you're this invested in any business, you need to earn as much as
-                        possible. We will make this possible for you.
+                        possible. W'll make this possible for you.
 
                       </p>
-                      <p class="text-400 mt-3">We will preplan a fit route for you and work hard to get you the best
+                      <p class="text-400 mt-3">We'll preplan a fit route for you and work hard to get you the best
                         rates. We start dispatching at 6 am CST to book you loads with the best rates. We only charge 5%
                         Register now to learn more and get a quote.</p>
 
@@ -331,19 +331,19 @@
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
                   src="assets/img/icons/response.png" height="60" alt="..." />
                 <h4 class="mt-4 fw-normal text-200">Fast response time</h4>
-                <p class="text-400 mb-md-0">We will always have available staffing to start working on your packets as
+                <p class="text-400 mb-md-0">We'll always have available staffing to start working on your packets as
                   soon as we receive them</p>
               </div>
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
                   src="assets/img/icons/work.png" height="60" alt="..." />
                 <h4 class="mt-4 fw-normal text-200">We'll do the hard work</h4>
-                <p class="text-400 mb-md-0">After you send us a packet, we will take care of the rest. We will call
+                <p class="text-400 mb-md-0">After you send us a packet, we'll take care of the rest. We'll call
                   contact all parties needed to complete your Carrier Packet.</p>
               </div>
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
                   src="assets/img/icons/dispatchingwhy.png" height="60" alt="..." />
                 <h4 class="mt-4 fw-normal text-200">Dispatching</h4>
-                <p class="text-400 mb-md-0">We will work with you to forge a plan that will make you the most money and
+                <p class="text-400 mb-md-0">We'll work with you to forge a plan that will make you the most money and
                   get you home when needed.</p>
               </div>
             </div>
@@ -480,7 +480,8 @@
                 1925</a><br />Houston, TX 77054, United States</p>
             <p class="text-light"> <i class="fas fa-envelope me-3 text-primary"> </i><a
                 href="mailto:support@ooforms.com">support@ooforms.com </a></p>
-            <p class="text-light"> <i class="fas fa-phone-alt me-3 text-primary"> </i><a href="tel:+1 281 501 1925">+1 281 501 1925 (Support)</a></p>
+            <p class="text-light"> <i class="fas fa-phone-alt me-3 text-primary"> </i><a href="tel:+1 281 501 1925">+1
+                281 501 1925 (Support)</a></p>
           </div>
           <!-- <div class="col-12 col-lg-6 col-xl-5">
             <h3 class="text-200 my-4">Subscribe to newsletter </h3>
@@ -513,17 +514,17 @@
             <div class="d-md-flex justify-content-between pb-1 pt-4">
               <div class="pb-4">
                 <ul class="widget-list d-flex flex-wrap justify-content-center justify-content-md-start">
-                  <li><a class="widget-list-link fs-ms" href="#">Home</a></li>
+                  <li  ><a class="widget-list-link fs-ms" href="#">Home</a></li>
                   <li class="ms-4"><a class="widget-list-link fs-ms" href="#products">Services</a></li>
                   <li class="ms-4"><a class="widget-list-link fs-ms" href="#testimonials">Testimonials</a></li>
                 </ul>
               </div>
               <div class="pb-4">
                 <ul class="list-unstyled list-inline my-2">
-                  <li class="list-inline-item"><a class="text-decoration-none" href="#!"><i
+                  <li class="list-inline-item"><a class="text-decoration-none"
+                      href="https://www.youtube.com/channel/UCMnlG3TME9Tu1CU1QspopnQ"><i
                         class="fab fa-youtube-square fa-4x social-icons"></i></a></li>
-                  <li class="list-inline-item"><a class="text-decoration-none" href="#!"><i
-                        class="fab fa-facebook fa-4x social-icons"></i></a></li>
+
                 </ul>
               </div>
             </div>
