--- a/public/index.html
+++ b/public/index.html
@@ -152,7 +152,7 @@
   <!--    Main Content-->
   <!-- ===============================================-->
   <div id="snackbar">
-    😁 Thank you for reaching out, Our support team will be contact you soon.
+    😁 Thank you for reaching out, Our support team will be contacting you soon.
   </div>
   <main class="main" id="top">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" data-navbar-on-scroll="data-navbar-on-scroll">
@@ -181,8 +181,8 @@
       <div class="container">
         <div class="row align-items-center min-vh-100">
           <div class="col-md-7 col-xl-7 pt-7 text-md-start text-center">
-            <h1 class="display-4 text-light fw-thin">We serve small trucking companies: We fill out Carrier Packets &
-              <br class="d-none d-xl-block" /> <strong class="fw-bolder"> we Dispatch. </strong>
+            <h1 class="display-4 text-light fw-thin">We serve small trucking companies: We fill out <b>Carrier Packets</b> & we
+              <br class="d-none d-xl-block" /> <strong class="fw-bolder">Dispatch. </strong>
             </h1>
             <br class="d-none d-xxl-block" />
             <p class="fs-1 text-400 pt-0">Take action now and free yourself from the hassle that comes with filling out
@@ -217,6 +217,8 @@
                       id="floatingCatrgory">
                       <option value="Carrier Packet">Carrier Packet</option>
                       <option value="Dispatching">Dispatching</option>
+                      <option value="Carrier Packets and Dispatching">Both</option>
+
                     </select>
                     <label for="floatingCatrgory">Contacting about ... </label>
                   </div>
@@ -337,7 +339,7 @@
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
                   src="assets/img/icons/work.png" height="60" alt="..." />
                 <h4 class="mt-4 fw-normal text-200">We'll do the hard work</h4>
-                <p class="text-400 mb-md-0">After you send us a packet, we'll take care of the rest. We'll call
+                <p class="text-400 mb-md-0">After you send us a packet, we'll take care of the rest. We'll call and 
                   contact all parties needed to complete your Carrier Packet.</p>
               </div>
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
@@ -524,6 +526,12 @@
                   <li class="list-inline-item"><a class="text-decoration-none"
                       href="https://www.youtube.com/channel/UCMnlG3TME9Tu1CU1QspopnQ"><i
                         class="fab fa-youtube-square fa-4x social-icons"></i></a></li>
+                        <li class="list-inline-item"><a class="text-decoration-none"
+                          href="https://www.facebook.com/TruckDriversRUs/"><i
+                            class="fab fa-facebook-square fa-4x social-icons"></i></a></li>
+                            <li class="list-inline-item"><a class="text-decoration-none"
+                              href="#!"><i
+                                class="fab fa-instagram-square fa-4x social-icons"></i></a></li>
 
                 </ul>
               </div>
