--- a/public/index.html
+++ b/public/index.html
@@ -530,7 +530,7 @@
                           href="https://www.facebook.com/TruckDriversRUs/"><i
                             class="fab fa-facebook-square fa-4x social-icons"></i></a></li>
                             <li class="list-inline-item"><a class="text-decoration-none"
-                              href="#!"><i
+                              href="https://www.instagram.com/ooforms/?utm_medium=copy_link"><i
                                 class="fab fa-instagram-square fa-4x social-icons"></i></a></li>
 
                 </ul>
