Changed Hosting Domain

--- a/public/index.html
+++ b/public/index.html
@@ -166,7 +166,7 @@
               class="text-light" href="tel:+1 281 501 1925">+1 281 501 1925</a></p>
           <ul class="navbar-nav ms-auto border-bottom border-lg-bottom-0 pt-2 pt-lg-0">
             <li class="nav-item px-2"><a class="nav-link" aria-current="page" href="#">Home</a></li>
-            <li class="nav-item px-2"><a class="nav-link" href="#products">Services</a></li>
+            <li class="nav-item px-2"><a class="nav-link" href="#services">Services</a></li>
             <li class="nav-item px-2"><a class="nav-link" href="#testimonials">Testimonials</a></li>
           </ul>
         </div>
@@ -238,7 +238,7 @@
         </div>
       </div>
     </section>
-    <section id="products">
+    <section id="services">
       <div class="bg-holder d-none d-md-block"
         style="background-image:url(assets/img/illustrations/bg-car-insurance.png);background-position:0 200px;background-size:100% 45%;">
       </div>
@@ -517,7 +517,7 @@
               <div class="pb-4">
                 <ul class="widget-list d-flex flex-wrap justify-content-center justify-content-md-start">
                   <li  ><a class="widget-list-link fs-ms" href="#">Home</a></li>
-                  <li class="ms-4"><a class="widget-list-link fs-ms" href="#products">Services</a></li>
+                  <li class="ms-4"><a class="widget-list-link fs-ms" href="#services">Services</a></li>
                   <li class="ms-4"><a class="widget-list-link fs-ms" href="#testimonials">Testimonials</a></li>
                 </ul>
               </div>
