--- a/public/index.html
+++ b/public/index.html
@@ -80,27 +80,22 @@
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
   <script>
     function myFunction() {
-      // Get the snackbar DIV
       var x = document.getElementById("snackbar");
 
-      // Add the "show" class to DIV
       x.className = "show";
 
-      // After 3 seconds, remove the show class from DIV
       setTimeout(function () { x.className = x.className.replace("show", ""); }, 3000);
     } 
   </script>
   <script>
     (function () {
       emailjs.init("user_9VCXyJZWZxmprsvsAUX7B");
-      // Obtain your user ID at the dashboard https://dashboard.emailjs.com/integration
     })();
   </script>
   <script type="text/javascript">
     window.onload = function () {
       document.getElementById('contact-form').addEventListener('submit', function (event) {
         event.preventDefault();
-        // these IDs from the previous steps
         emailjs.sendForm('service_turtqop', 'template_xvor8no', this)
           .then(function () {
             myFunction()
@@ -181,7 +176,8 @@
       <div class="container">
         <div class="row align-items-center min-vh-100">
           <div class="col-md-7 col-xl-7 pt-7 text-md-start text-center">
-            <h1 class="display-4 text-light fw-thin">We serve small trucking companies: We fill out <b>Carrier Packets</b> & we
+            <h1 class="display-4 text-light fw-thin">We serve small trucking companies: We fill out <b>Carrier
+                Packets</b> & we
               <br class="d-none d-xl-block" /> <strong class="fw-bolder">Dispatch. </strong>
             </h1>
             <br class="d-none d-xxl-block" />
@@ -339,7 +335,7 @@
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
                   src="assets/img/icons/work.png" height="60" alt="..." />
                 <h4 class="mt-4 fw-normal text-200">We'll do the hard work</h4>
-                <p class="text-400 mb-md-0">After you send us a packet, we'll take care of the rest. We'll call and 
+                <p class="text-400 mb-md-0">After you send us a packet, we'll take care of the rest. We'll call and
                   contact all parties needed to complete your Carrier Packet.</p>
               </div>
               <div class="col-sm-6 col-lg-3 mb-6 text-center text-sm-start"><img class="shadow-icon"
@@ -516,7 +512,7 @@
             <div class="d-md-flex justify-content-between pb-1 pt-4">
               <div class="pb-4">
                 <ul class="widget-list d-flex flex-wrap justify-content-center justify-content-md-start">
-                  <li  ><a class="widget-list-link fs-ms" href="#">Home</a></li>
+                  <li><a class="widget-list-link fs-ms" href="#">Home</a></li>
                   <li class="ms-4"><a class="widget-list-link fs-ms" href="#services">Services</a></li>
                   <li class="ms-4"><a class="widget-list-link fs-ms" href="#testimonials">Testimonials</a></li>
                 </ul>
@@ -526,12 +522,12 @@
                   <li class="list-inline-item"><a class="text-decoration-none"
                       href="https://www.youtube.com/channel/UCMnlG3TME9Tu1CU1QspopnQ"><i
                         class="fab fa-youtube-square fa-4x social-icons"></i></a></li>
-                        <li class="list-inline-item"><a class="text-decoration-none"
-                          href="https://www.facebook.com/TruckDriversRUs/"><i
-                            class="fab fa-facebook-square fa-4x social-icons"></i></a></li>
-                            <li class="list-inline-item"><a class="text-decoration-none"
-                              href="https://www.instagram.com/ooforms/?utm_medium=copy_link"><i
-                                class="fab fa-instagram-square fa-4x social-icons"></i></a></li>
+                  <li class="list-inline-item"><a class="text-decoration-none"
+                      href="https://www.facebook.com/TruckDriversRUs/"><i
+                        class="fab fa-facebook-square fa-4x social-icons"></i></a></li>
+                  <li class="list-inline-item"><a class="text-decoration-none"
+                      href="https://www.instagram.com/ooforms/?utm_medium=copy_link"><i
+                        class="fab fa-instagram-square fa-4x social-icons"></i></a></li>
 
                 </ul>
               </div>
