--- a/public/index.html
+++ b/public/index.html
@@ -151,8 +151,10 @@
   </div>
   <main class="main" id="top">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" data-navbar-on-scroll="data-navbar-on-scroll">
-      <div class="container"><a class="navbar-brand" href="index.html"><span
-            class="text-primary fs-3 ms-2 fw-bolder">oo</span><span class="fw-thin text-300 fs-3">Forms</span></a>
+      <div class="container"><a class="navbar-brand" href="index.html">
+          <img src="./assets/logos/ooforms transparent.png" width="150px" />
+
+        </a>
         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
           aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -470,9 +472,10 @@
       <div class="container">
         <div class="row">
           <h2 class="text-light mb-4">Contact Us</h2>
-          <div class="col-12 col-lg-6 col-xl-7 mb-4 order-0 order-sm-0"><a class="logo-footer fs-7"
-              href="index.html"><span class="text-primary fw-bolder">oo</span><span
-                class="fw-thin text-300">Forms</span></a>
+          <div class="col-12 col-lg-6 col-xl-7 mb-4 order-0 order-sm-0">
+            <a class="logo-footer fs-7" href="index.html">
+              <img src="./assets/logos/ooforms transparent.png" width="50%" />
+            </a>
             <p class="text-light my-4"> <i class="fas fa-map-marker-alt me-3"></i><span class="text-light">2616 S Loop W
                 Suite # 305i, &nbsp;</span><a class="text-light" href="tel:+1 281 501 1925">+1 281 501
                 1925</a><br />Houston, TX 77054, United States</p>
