--- a/public/index.html
+++ b/public/index.html
@@ -152,7 +152,7 @@
   <main class="main" id="top">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" data-navbar-on-scroll="data-navbar-on-scroll">
       <div class="container"><a class="navbar-brand" href="index.html">
-          <img src="./assets/logos/ooforms transparent.png" width="150px" />
+          <img src="./assets/logos/ooforms transparent.png" width="110px" />
 
         </a>
         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
@@ -474,7 +474,7 @@
           <h2 class="text-light mb-4">Contact Us</h2>
           <div class="col-12 col-lg-6 col-xl-7 mb-4 order-0 order-sm-0">
             <a class="logo-footer fs-7" href="index.html">
-              <img src="./assets/logos/ooforms transparent.png" width="50%" />
+              <img src="./assets/logos/ooforms transparent.png" width="40%" />
             </a>
             <p class="text-light my-4"> <i class="fas fa-map-marker-alt me-3"></i><span class="text-light">2616 S Loop W
                 Suite # 305i, &nbsp;</span><a class="text-light" href="tel:+1 281 501 1925">+1 281 501
@@ -526,7 +526,7 @@
                       href="https://www.youtube.com/channel/UCMnlG3TME9Tu1CU1QspopnQ"><i
                         class="fab fa-youtube-square fa-4x social-icons"></i></a></li>
                   <li class="list-inline-item"><a class="text-decoration-none"
-                      href="https://www.facebook.com/TruckDriversRUs/"><i
+                      href="https://www.facebook.com/ooforms"><i
                         class="fab fa-facebook-square fa-4x social-icons"></i></a></li>
                   <li class="list-inline-item"><a class="text-decoration-none"
                       href="https://www.instagram.com/ooforms/?utm_medium=copy_link"><i
