--- a/public/index.html
+++ b/public/index.html
@@ -149,8 +149,14 @@
     }
   </script>
 
+  <meta charset="UTF-8">
+  <meta name="description"
+    content="Do you need help with Carrier Packets? Let us help you. Even if you know how to fill out a carrier packet, we can help you. Contact us to learn how. 281-501-1925">
+  <meta name="application-name" content="ooForms.com || We can help Carriers sign up with new Brokers">
+  <meta name="keywords" content="Carrier Packets, how to fill out carrier packets, Trucking Business">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>ooForms</title>
+  <title>ooForms.com </title>
 
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png">
@@ -189,16 +195,27 @@
 
   <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=388369805984984&ev=PageView&noscript=1" /></noscript>
-
-
-
-
   <meta name="facebook-domain-verification" content="xtondceoydprpgfn3nangefbkwsisw" />
+
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-THFBNTZ');</script>
+  <!-- End Google Tag Manager -->
 </head>
 
 
 <body>
 
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-THFBNTZ" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <!-- ===============================================-->
   <!--    Main Content-->
   <!-- ===============================================-->
