--- a/public/index.html
+++ b/public/index.html
@@ -287,7 +287,7 @@
           <div class="col-md-5 col-xl-5 pe-xxl-0">
             <div class="card card-bg shadow hero-header-form">
               <div class="card-body p-4 p-xl-6">
-                <h2 class="text-100 text-center">Contact Us</h2>
+                <h2 class="text-100 text-center">Register now for more information</h2>
                 <form class="mb-3" id="contact-form" onsubmit='disableButton()'>
                   <div class="form-floating mb-3">
                     <input required name="full_name" class="form-control input-box form-ensurance-header-control"
@@ -320,8 +320,7 @@
                     <label for="floatingTextarea">Comments</label>
                   </div>
                   <div class="col-12 d-grid">
-                    <button value="Send" class="btn btn-primary rounded-pill" id='btn' type="submit">Register
-                      now</button>
+                    <button value="Send" class="btn btn-primary rounded-pill" id='btn' type="submit">Learn More</button>
                   </div>
                 </form>
               </div>
