--- a/public/index.html
+++ b/public/index.html
@@ -487,6 +487,30 @@
                         <div class="card-body pt-0 p-md-0">
                           <div class="d-flex flex-column flex-md-row align-items-center">
                             <div class="card-span-img">
+                              <div class="circle-wrapper"><img class="rounded-circle w-100" src="assets/img/team/3.png"
+                                  alt="" /></div>
+                            </div>
+                            <div class="mt-n6 mt-md-0 text-center text-md-start px-md-6 px-xl-8 px-xxl-10">
+                              <h4 class="mb-0 fw-medium text-white">Nestor Guillen</h4>
+                              <p class="fw-normal mb-0 text-primary">NG Freight LLC - Owner</p>
+                              <p class="card-text text-200 mt-3">“I’ve been with these people for about four months it
+                                has not been once that I called them send them a message and they sent my care package
+                                immediately back to the right people with everything perfect I am super happy with them”
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="row h-100">
+                    <div class="col-12">
+                      <div class="card testimonial-bg card-span text-white mt-10 mt-md-7 mt-lg-8 mx-4 mx-md-0">
+                        <div class="card-body pt-0 p-md-0">
+                          <div class="d-flex flex-column flex-md-row align-items-center">
+                            <div class="card-span-img">
                               <div class="circle-wrapper"><img class="rounded-circle w-100" src="assets/img/team/2.png"
                                   alt="" /></div>
                             </div>
@@ -546,6 +570,8 @@
                       aria-label="Slide 2"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                       aria-label="Slide 3"> </button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                      aria-label="Slide 4"> </button>
                   </div>
                 </div>
               </div>
